# itten-color

./: LICENSE  README.md
.github/workflows/: ts-publish.yml  ts-pull.yml
solutions/python/: pyproject.toml
solutions/ts/: .npmignore  constants.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  tslint.json
solutions/ts/example/: index.js  package-lock.json  package.json
solutions/ts/src/: index.ts  types.ts
solutions/ts/src/__tests__/: constants.test.ts  index.test.ts
