[project]
name = "ittencolor"
version = "0.1.0"
description = ""
authors = [
    {name = "Marat Zimnurov",email = "zimtir@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "ittencolor", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
